versions/v4.0.0/build/dts/api/bindings/usb/renesas,smartbond-usbd.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/usb/renesas,smartbond-usbd.html
original_path: build/dts/api/bindings/usb/renesas,smartbond-usbd.html
---

# renesas,smartbond-usbd

Vendor: [Renesas Electronics Corporation](../../bindings.md#dt-vendor-renesas)

Note

An implementation of a driver matching this compatible is available in
[drivers/usb/udc/udc\_smartbond.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/usb/udc/udc_smartbond.c).

## Description

These nodes are “usb” bus nodes.

```text
Renesas SmartBond USB device controller
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `dma-min-transfer-size` | `int` | ```text Minimum transfer size required to engage DMA. ``` |
| `ep-out-buf-size` | `array` | ```text Buffer size for OUT end points 0-3. ```  This property is **required**. |
| `fifo-read-threshold` | `int` | ```text RX FIFO is 64 bytes. When endpoint size is greater then 64, FIFO warning interrupt is enabled to allow read incoming data during frame reception. It is possible to stay in interrupt reading whole packet at once, but it may be more efficient for MCU to read as much data as possible and when FIFO is hardly filled exit interrupt handler waiting for next FIFO warning level interrupt or packet end. When running at 96MHz code that reads FIFO based on number of bytes stored in USB_RXSx_REG.USB_RXCOUNT takes enough time to fill FIFO with two additional bytes. Settings this threshold above this allows to leave interrupt handler and wait for more bytes before next ISR. This allows reduce overall ISR time to 1/3 of time that would be needed if ISR read as fast as possible. ``` |
| `iso-out-mps` | `int` | ```text Max packet size for ISO out endpoint ``` |
| `num-bidir-endpoints` | `int` | ```text Number of bi-directional endpoints supported by hardware (including EP0) ```  This property is **required**. |
| `num-in-endpoints` | `int` | ```text Number of IN endpoints supported by hardware (including EP0 IN) ``` |
| `num-out-endpoints` | `int` | ```text Number of OUT endpoints supported by hardware (including EP0 OUT) ``` |
| `maximum-speed` | `string` | ```text Configures USB controllers to work up to a specific speed. Valid arguments are "super-speed", "high-speed", "full-speed" and "low-speed". If this is not passed via DT, USB controllers should use their maximum hardware capability. ```  Legal values: `'low-speed'`, `'full-speed'`, `'high-speed'`, `'super-speed'` |
| `vbus-gpios` | `phandle-array` | ```text Control VBUS via GPIO pin. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “renesas,smartbond-usbd” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
